# cdd-ctl

./: .gitignore  API.md  Cargo.toml  Makefile  README.md  alpine.Dockerfile  config.yaml  debian.Dockerfile  install.sh
.github/workflows/: ci.yml
cdd-ctl-wasm-sdk/: package-lock.json
cli/: Cargo.toml
cli/src/: main.rs
src/: args.rs  config.rs  error.rs  init.rs  instruction.rs  lib.rs  logger.rs  main.rs  project.rs  project_graph.rs  schema.rs  service.rs  services.rs
src/commands/: init.rs  mod.rs  regenerate.rs  sync.rs
src/project/: mod.rs  model.rs  request.rs  variable.rs
src/services/: mod.rs
src/util/: exec.rs  filesystem.rs  mod.rs
