[package]
name = "cdd"
authors = ["Samuel Marks <@SamuelMarks>", "Rob Saunders <rob@wearebrandnew.com>"]
version = "0.0.1"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
structopt = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
dirs = "2.0.2"
colored = "1.8.0"
log = "0.4"
simplelog = "0.7.4"
fs_extra = "1.1.0"
failure = "0.1.6"
openapiv3 = "0.3"
url = "2.1.0"

[lib]

[[bin]]
name = "cdd"
