[package]
name = "cdd-ctl"
version = "0.0.1"
edition = "2021"

[dependencies]
cdd-engine = { path = "../cdd-engine" }
cdd-gateway = { git = "https://github.com/SamuelMarks/cdd-gateway" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.6.1", features = ["derive"] }
actix-web = "4"
dotenvy = "0.15"
utoipa = "5.5.0"
serde_json = "1.0.150"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
