[package]
name = "cdd-cli"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdd = { path = '../' }
structopt = "0.3.5"
log = "0.4"
simplelog = "0.7.4"
